// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with one strategy 1`] = `
<react-mdl-Card
  className="fullwidth"
  shadow={0}
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <div
    style={
      Object {
        "borderBottom": "1px solid #f1f1f1",
        "display": "flex",
        "marginBottom": "10px",
        "padding": "16px 20px ",
      }
    }
  >
    <div
      style={
        Object {
          "flex": "2",
        }
      }
    >
      <h6
        style={
          Object {
            "margin": 0,
          }
        }
      >
        Strategies
      </h6>
    </div>
    <div
      style={
        Object {
          "flex": "1",
          "textAlign": "right",
        }
      }
    >
      <react-mdl-IconButton
        name="add"
        onClick={[Function]}
        raised={true}
        title="Add new strategy"
      />
    </div>
  </div>
  <react-mdl-List>
    <react-mdl-ListItem
      className=""
      twoLine={true}
    >
      <react-mdl-ListItemContent
        icon="extension"
        subtitle="another's description"
      >
        <a
          href="/strategies/view/Another"
          onClick={[Function]}
          title=""
        >
          <strong>
            Another
          </strong>
        </a>
      </react-mdl-ListItemContent>
      <span>
        <react-mdl-IconButton
          color="#"
          disabled={false}
          name="visibility_off"
          onClick={[Function]}
          title="Deprecate acitvation strategy"
        />
        <react-mdl-IconButton
          name="delete"
          onClick={[Function]}
          title="Delete acitvation strategy"
        />
      </span>
    </react-mdl-ListItem>
  </react-mdl-List>
</react-mdl-Card>
`;

exports[`renders correctly with one strategy without permissions 1`] = `
<react-mdl-Card
  className="fullwidth"
  shadow={0}
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <div
    style={
      Object {
        "borderBottom": "1px solid #f1f1f1",
        "display": "flex",
        "marginBottom": "10px",
        "padding": "16px 20px ",
      }
    }
  >
    <div
      style={
        Object {
          "flex": "2",
        }
      }
    >
      <h6
        style={
          Object {
            "margin": 0,
          }
        }
      >
        Strategies
      </h6>
    </div>
    
  </div>
  <react-mdl-List>
    <react-mdl-ListItem
      className=""
      twoLine={true}
    >
      <react-mdl-ListItemContent
        icon="extension"
        subtitle="another's description"
      >
        <a
          href="/strategies/view/Another"
          onClick={[Function]}
          title=""
        >
          <strong>
            Another
          </strong>
        </a>
      </react-mdl-ListItemContent>
      <span>
        <react-mdl-IconButton
          color="#"
          disabled={false}
          name="visibility_off"
          onClick={[Function]}
          title="Deprecate acitvation strategy"
        />
        <react-mdl-IconButton
          disabled={true}
          name="delete"
          onClick={[Function]}
          title="You can not delete a built-in strategy"
        />
      </span>
    </react-mdl-ListItem>
  </react-mdl-List>
</react-mdl-Card>
`;
